force-app/main/default/objects/ampi__xx_Framework__c/fields/ampi__xx_Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Description__c</fullName>
    <description>Text area field to describe the thematic area</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>