force-app/main/default/objects/ampi__xx_Framework__c/fields/ampi__xx_Framework_Locked__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Framework_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Framework Locked</label>
    <type>Checkbox</type>
</CustomField>