force-app/main/default/objects/ampi__xx_Framework__c/fields/ampi__xx_Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Project this Framework belongs to.</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Frameworks</relationshipLabel>
    <relationshipName>Frameworks</relationshipName>
    <type>Lookup</type>
</CustomField>