force-app/main/default/objects/ampi__xx_Framework__c/fields/ampi__xx_Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Reviewer_Comments__c</fullName>
    <label>Reviewer Comments</label>
    <type>TextArea</type>
</CustomField>