force-app/main/default/objects/ampi__xx_Framework__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>ampi__xx_Project__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ampi__xx_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>